--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     ]
   },
   "dependencies": {
+    "draft-js": "0.11.7",
+    "draft-js-export-html": "1.4.1",
+    "draft-js-utils": "1.4.0",
     "next": "9.5.5",
     "react": "16.14.0",
     "react-dom": "16.14.0"
